# riley_skills

./: .gitignore  .mcp.json  CLAUDE.md  README.md  plugin.json
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
mcp/slack-notify/: pyproject.toml
mcp/slack-notify/src/slack_notify/: server.py
scripts/: block-plan-mode.sh  precompact-workflow.sh
skills/: dirgrab.md  external-models.md  init-project.md  review.md  workflow.md
skills/dirgrab/: SKILL.md
skills/external-models/: SKILL.md
skills/init-project/: SKILL.md
skills/review/: SKILL.md
skills/workflow/: SKILL.md
