[project]
name = "slack-notify"
version = "0.1.0"
description = "Minimal Slack notification MCP server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
slack-notify = "slack_notify.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
